# RAG-Agents-With-Evaluation

./: .env.example  .gitignore  Dockerfile  LICENSE  Makefile  README.md  pyproject.toml  requirements.txt  run_all.py  setup.py
agents/: corrective_rag_judgeval.py  reasoning_agent.py  simple_rag_agent.py
dashboard/: dashboard.py
evaluation/: run_comparison.py  run_evaluation.py
tests/: test_agents.py
