[
tool.ruff
]
line-length = 88
select = ["E", "F", "I", "N", "W"]
ignore = ["E501"]

[tool.black]
line-length = 88
target-version = ['py38', 'py39', 'py310']

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = "test_*.py"
addopts = "-v --tb=short --strict-markers"

[tool.coverage.run]
source = ["."]
omit = ["venv/*", "tests/*", "setup.py"]

[tool.poetry]
name = "judgment-rag-agents"
version = "0.1.0"
description = "Advanced RAG agents with Judgment Labs integration"
authors = ["Your Name <your.email@example.com>"]

[tool.poetry.dependencies]
python = "^3.8"
judgeval = "^0.0.53"
langchain = "^0.1.0"
streamlit = "^1.28.0"